--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,6 +1,7 @@
 .bg-color {
   background: #7469b6 !important;
 }
+
 .banner {
   width: 100%;
   height: 93vh;
@@ -9,12 +10,14 @@
   background-size: cover;
   color: white;
 }
+
 .my-card {
   padding: 20px;
   background: #ffffff;
   height: 100%;
   border-radius: 2%;
 }
+
 .divider:after,
 .divider:before {
   content: "";
@@ -22,11 +25,74 @@
   height: 1px;
   background: #eee;
 }
+
 .h-custom {
   height: calc(100% - 73px);
 }
+
 @media (max-width: 450px) {
   .h-custom {
     height: 100%;
   }
+}
+
+@media only screen and (max-width: 600px) {
+  .sidebar {
+    display: none;
+    width: 80% !important;
+    background: #ffffff;
+    height: 100vh;
+    position: fixed;
+    padding-top: 20px;
+  }
+  .content {
+    margin-left: 0% !important;
+  }
+}
+
+.sidebar {
+  width: 15%;
+  background: #ffffff;
+  height: 100vh;
+  position: fixed;
+  padding-top: 45px;
+}
+
+.sidebar a {
+  display: block;
+  width: 100%;
+  padding: 10px 25px;
+  text-decoration: none;
+  color: gray;
+}
+
+.sidebar a:hover {
+  background: #e2e2e2;
+  color: gray;
+  text-decoration: none;
+}
+
+.sidebar .divider {
+  height: 0.5px;
+  width: 100%;
+  background: #e2e2e2;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.content {
+  margin-left: 15%;
+}
+
+.sidebar .crossBtn {
+  position: absolute;
+  top: 0px;
+  right: 20px;
+  font-size: 20px;
+  cursor: pointer;
+  margin-top: 7px;
+}
+
+.sidebar a i {
+  margin-right: 10px;
 }
