--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -17,8 +17,8 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
@@ -45,7 +45,35 @@
     </nav>
     <!-- navbar end -->
 
-    <div th:replace="${content}"></div>
+    <!-- sidebar -->
+    <div class="sidebar">
+      <span class="crossBtn"
+        ><i onclick="toggleSidebar()" class="fas fa-times"></i
+      ></span>
+      <div class="divider"></div>
+      <a href="#" class="item"><i class="fas fa-home"></i>Home</a>
+      <a href="#" class="item"
+        ><i class="fas fa-address-book"></i>View Contacts</a
+      >
+      <a href="#" class="item"><i class="fas fa-user-plus"></i>Add Contact</a>
+      <a href="#" class="item"
+        ><i class="fas fa-user-circle"></i>Your Profile</a
+      >
+      <a href="#" class="item"><i class="fas fa-cog"></i>Setting</a>
+      <a href="#" class="item"><i class="fas fa-sign-out-alt"></i>Logout</a>
+      <div class="divider"></div>
+    </div>
+
+    <!-- content -->
+    <div class="content banner">
+      <i
+        onclick="toggleSidebar()"
+        class="fas fa-bars m-3"
+        style="cursor: pointer"
+      ></i>
+      <div th:replace="${content}"></div>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
