--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -25,13 +25,15 @@
   </head>
   <body>
     <!-- navbar start -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-color">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-color fixed-top">
       <div class="container-fluid row justify-content-between">
         <a class="navbar-brand" href="">Smart Contact Manager</a>
       </div>
       <div class="collapse navbar-collapse" id="navbarSpportedContent">
         <ul class="navbar-nav text-uppercase">
-          <li class="nav-item"><a class="nav-link" th:href="@{/}">Home</a></li>
+          <li class="nav-item">
+            <a class="nav-link" th:href="@{/user/dashboard}">Home</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link active" th:href="@{/user/dashboard}"
               ><span th:text="${user.userName}"></span
@@ -43,35 +45,44 @@
         </ul>
       </div>
     </nav>
+
     <!-- navbar end -->
 
-    <!-- sidebar -->
-    <div class="sidebar">
-      <span class="crossBtn"
-        ><i onclick="toggleSidebar()" class="fas fa-times"></i
-      ></span>
-      <div class="divider"></div>
-      <a href="#" class="item"><i class="fas fa-home"></i>Home</a>
-      <a href="#" class="item"
-        ><i class="fas fa-address-book"></i>View Contacts</a
-      >
-      <a href="#" class="item"><i class="fas fa-user-plus"></i>Add Contact</a>
-      <a href="#" class="item"
-        ><i class="fas fa-user-circle"></i>Your Profile</a
-      >
-      <a href="#" class="item"><i class="fas fa-cog"></i>Setting</a>
-      <a href="#" class="item"><i class="fas fa-sign-out-alt"></i>Logout</a>
-      <div class="divider"></div>
-    </div>
+    <div class="mt-5 pt-2">
+      <!-- sidebar -->
+      <div class="sidebar">
+        <span class="crossBtn"
+          ><i onclick="toggleSidebar()" class="fas fa-times"></i
+        ></span>
+        <div class="divider"></div>
+        <a th:href="@{/user/dashboard}" class="item"
+          ><i class="fas fa-home"></i>Home</a
+        >
+        <a href="#" class="item"
+          ><i class="fas fa-address-book"></i>View Contacts</a
+        >
+        <a th:href="@{/user/add-contact}" class="item"
+          ><i class="fas fa-user-plus"></i>Add Contact</a
+        >
+        <a href="#" class="item"
+          ><i class="fas fa-user-circle"></i>Your Profile</a
+        >
+        <a href="#" class="item"><i class="fas fa-cog"></i>Setting</a>
+        <a th:href="@{/logout}" class="item"
+          ><i class="fas fa-sign-out-alt"></i>Logout</a
+        >
+        <div class="divider"></div>
+      </div>
 
-    <!-- content -->
-    <div class="content banner">
-      <i
-        onclick="toggleSidebar()"
-        class="fas fa-bars m-3"
-        style="cursor: pointer"
-      ></i>
-      <div th:replace="${content}"></div>
+      <!-- content -->
+      <div class="content banner">
+        <i
+          onclick="toggleSidebar()"
+          class="fas fa-bars m-3"
+          style="cursor: pointer"
+        ></i>
+        <div th:replace="${content}"></div>
+      </div>
     </div>
 
     <script
