--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -75,14 +75,9 @@
                 </div>
                 <a href="#!" class="text-body">Forgot password?</a>
               </div>
-
-              <div class="text-center text-lg-start mt-4 pt-2">
-                <button
-                  type="submit"
-                  class="btn btn-primary"
-                  style="padding-left: 2.5rem; padding-right: 2.5rem"
-                >
-                  Login
+              <div class="container text-center mt-4 pt-4">
+                <button type="submit" class="btn bg-color text-white">
+                  Log-in
                 </button>
                 <p class="small fw-bold mt-2 pt-1 mb-0">
                   Don't have an account?
