--- a/src/main/resources/templates/normal/add_contact.html
+++ b/src/main/resources/templates/normal/add_contact.html
@@ -8,10 +8,19 @@
     <section>
       <div class="card bg-transparent m-3">
         <div class="card-body">
-          <h1 class="text-center">Add Contact</h1>
+          <h1 class="text-center text-white">Add Contact</h1>
+
           <div class="container-fluid mt-1">
             <div class="row">
               <div class="col-md-6 offset-md-3">
+                <div
+                  th:if="${session.message}"
+                  class="alert text-center"
+                  th:classappend="${'alert-'+session.message.type}"
+                  role="alert"
+                >
+                  <span th:text="${session.message.content}"></span>
+                </div>
                 <form
                   th:action="@{/user/proccess-contact}"
                   method="post"
@@ -20,67 +29,59 @@
                   class="mt-2"
                 >
                   <!-- name -->
-                  <div class="input-group">
-                    <div class="input-group-prepend">
-                      <div class="input-group-text">
-                        <i class="fa fa-plus"></i>
-                      </div>
-                    </div>
+                  <div class="input-group mb-3">
+                    <span class="input-group-text"
+                      ><i class="fa fa-plus"></i
+                    ></span>
                     <input
                       type="text"
+                      class="form-control me-3"
                       name="cFirstName"
                       id="firstname"
                       placeholder="Enter first name"
-                      class="form-control mr-3"
                     />
                     <input
                       type="text"
+                      class="form-control"
                       name="cSecondName"
                       id="secondname"
                       placeholder="Enter second name"
-                      class="form-control"
                     />
                   </div>
 
                   <!-- NickName -->
-                  <div class="input-group mt-3">
-                    <div class="input-group-prepend">
-                      <div class="input-group-text">
-                        <i class="fas fa-user"></i>
-                      </div>
-                    </div>
+                  <div class="input-group mb-3">
+                    <span class="input-group-text"
+                      ><i class="fa fa-user"></i
+                    ></span>
                     <input
                       type="text"
+                      class="form-control"
                       name="cNickName"
                       id="nickname"
                       placeholder="Enter nick name"
-                      class="form-control"
                     />
                   </div>
 
                   <!-- email -->
-                  <div class="input-group mt-3">
-                    <div class="input-group-prepend">
-                      <div class="input-group-text">
-                        <i class="fas fa-at"></i>
-                      </div>
-                    </div>
+                  <div class="input-group mb-3">
+                    <span class="input-group-text"
+                      ><i class="fa fa-at"></i
+                    ></span>
                     <input
                       type="email"
+                      class="form-control"
                       name="cEmail"
                       id="email"
                       placeholder="Enter email"
-                      class="form-control"
                     />
                   </div>
 
                   <!-- phone number -->
-                  <div class="input-group mt-3">
-                    <div class="input-group-prepend">
-                      <div class="input-group-text">
-                        <i class="fas fa-phone"></i>
-                      </div>
-                    </div>
+                  <div class="input-group mb-3">
+                    <span class="input-group-text"
+                      ><i class="fa fa-phone"></i
+                    ></span>
                     <input
                       type="number"
                       name="cPhone"
@@ -90,28 +91,29 @@
                     />
                   </div>
 
-                  <div class="input-group mt-3">
+                  <div class="input-group mb-3">
                     <!-- work -->
-                    <div class="input-group-prepend">
-                      <div class="input-group-text">
-                        <i class="fas fa-briefcase"></i>
-                      </div>
-                    </div>
+                    <span class="input-group-text"
+                      ><i class="fas fa-briefcase-medical"></i
+                    ></span>
                     <input
                       type="text"
                       name="cWork"
                       id="work"
                       placeholder="Enter work"
-                      class="form-control mr-3"
+                      class="form-control me-3"
                     />
                     <!-- image -->
-                    <div class="custom-file">
-                      <input type="file" name="imageUrl" />
-                    </div>
+                    <input
+                      type="file"
+                      class="form-control"
+                      id="inputGroupFile01"
+                      name="profileImage"
+                    />
                   </div>
 
                   <!-- contact description -->
-                  <div class="form-group mt-3">
+                  <div class="form-group mb-3">
                     <textarea
                       name="cInfo"
                       id="info"
@@ -121,7 +123,10 @@
                     ></textarea>
                   </div>
                   <div class="container text-center">
-                    <input type="submit" class="btn btn-outline-primary" />
+                    <button type="submit" class="btn bg-color text-white">
+                      Submit
+                    </button>
+                    <button type="reset" class="btn btn-warning">Reset</button>
                   </div>
                 </form>
               </div>
