--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -10,9 +10,9 @@
     <title th:text="${title}"></title>
     <link rel="stylesheet" th:href="@{/css/style.css}" />
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
     <link
@@ -26,23 +26,39 @@
   <body>
     <!-- navbar start -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-color fixed-top">
-      <div class="container-fluid row justify-content-between">
-        <a class="navbar-brand" href="">Smart Contact Manager</a>
-      </div>
-      <div class="collapse navbar-collapse" id="navbarSpportedContent">
-        <ul class="navbar-nav text-uppercase">
-          <li class="nav-item">
-            <a class="nav-link" th:href="@{/user/dashboard}">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" th:href="@{/user/dashboard}"
-              ><span th:text="${user.userName}"></span
-            ></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" th:href="@{/logout}">Logout</a>
-          </li>
-        </ul>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Smart Contact Manager</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                aria-current="page"
+                th:href="@{/user/dashboard}"
+                >Home</a
+              >
+            </li>
+            <li class="navName nav-item text-center">
+              <a class="nav-link active" th:href="@{/user/dashboard}"
+                ><span th:text="${user.userName}"></span
+              ></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" th:href="@{/logout}">Logout</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
 
@@ -58,7 +74,7 @@
         <a th:href="@{/user/dashboard}" class="item"
           ><i class="fas fa-home"></i>Home</a
         >
-        <a href="#" class="item"
+        <a th:href="@{/user/show-contacts/0}" class="item"
           ><i class="fas fa-address-book"></i>View Contacts</a
         >
         <a th:href="@{/user/add-contact}" class="item"
@@ -86,18 +102,13 @@
     </div>
 
     <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
-      integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
       crossorigin="anonymous"
     ></script>
     <script th:src="@{/js/script.js}"></script>
