--- a/src/main/resources/templates/normal/add_contact.html
+++ b/src/main/resources/templates/normal/add_contact.html
@@ -20,6 +20,9 @@
                   role="alert"
                 >
                   <span th:text="${session.message.content}"></span>
+                  <th:block
+                    th:text="${@sessionHelper.removeMessageFromSession()}"
+                  ></th:block>
                 </div>
                 <form
                   th:action="@{/user/proccess-contact}"
