--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -22,6 +22,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://common.olemiss.edu/_js/sweet-alert/sweet-alert.css"
+    />
   </head>
   <body>
     <!-- navbar start -->
@@ -112,5 +117,6 @@
       crossorigin="anonymous"
     ></script>
     <script th:src="@{/js/script.js}"></script>
+    <script src="https://common.olemiss.edu/_js/sweet-alert/sweet-alert.min.js"></script>
   </body>
 </html>
