--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -85,7 +85,7 @@
         <a th:href="@{/user/add-contact}" class="item"
           ><i class="fas fa-user-plus"></i>Add Contact</a
         >
-        <a href="#" class="item"
+        <a th:href="@{/user/profile}" class="item"
           ><i class="fas fa-user-circle"></i>Your Profile</a
         >
         <a href="#" class="item"><i class="fas fa-cog"></i>Setting</a>
