--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -58,7 +58,7 @@
 
               <!-- email field -->
               <div class="form-group m-3">
-                <label for="email_field">Your name</label>
+                <label for="email_field">Your Email</label>
                 <input
                   type="email"
                   name="userEmail"
@@ -77,7 +77,7 @@
 
               <!-- password field -->
               <div class="form-group m-3">
-                <label for="password_field">Your name</label>
+                <label for="password_field">Your Password</label>
                 <input
                   type="password"
                   name="userPassword"
