--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -27,6 +27,11 @@
       type="text/css"
       href="https://common.olemiss.edu/_js/sweet-alert/sweet-alert.css"
     />
+    <script
+      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!-- navbar start -->
@@ -76,19 +81,21 @@
           ><i onclick="toggleSidebar()" class="fas fa-times"></i
         ></span>
         <div class="divider"></div>
-        <a th:href="@{/user/dashboard}" class="item"
+        <a th:href="@{/user/dashboard}" id="home-link" class="item"
           ><i class="fas fa-home"></i>Home</a
         >
-        <a th:href="@{/user/show-contacts/0}" class="item"
+        <a th:href="@{/user/show-contacts/0}" id="view-link" class="item"
           ><i class="fas fa-address-book"></i>View Contacts</a
         >
-        <a th:href="@{/user/add-contact}" class="item"
+        <a th:href="@{/user/add-contact}" id="add-link" class="item"
           ><i class="fas fa-user-plus"></i>Add Contact</a
         >
-        <a th:href="@{/user/profile}" class="item"
+        <a th:href="@{/user/profile}" id="profile-link" class="item"
           ><i class="fas fa-user-circle"></i>Your Profile</a
         >
-        <a href="#" class="item"><i class="fas fa-cog"></i>Setting</a>
+        <a th:href="@{/user/settings}" id="setting-link" class="item"
+          ><i class="fas fa-cog"></i>Setting</a
+        >
         <a th:href="@{/logout}" class="item"
           ><i class="fas fa-sign-out-alt"></i>Logout</a
         >
@@ -109,11 +116,6 @@
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
       crossorigin="anonymous"
     ></script>
     <script th:src="@{/js/script.js}"></script>
