--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -23,7 +23,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body>
+  <body style="background: black">
     <!-- navbar start -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-color fixed-top">
       <div class="container-fluid">
@@ -64,8 +64,10 @@
       </div>
     </nav>
     <!-- navbar end -->
+    <div class="mt-5">
+      <div th:replace="${content}"></div>
+    </div>
 
-    <div th:replace="${content}"></div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
